# backend/app/Http/Controllers/DiscapacidadController.php
@@ -43,4 +43,34 @@ class DiscapacidadController extends Controller
     {
         return $this->discapacidadService->eliminarDiscapacidad($id);
     }
+
+
+
+    public function crearAsignacionEmpleadoDiscapacidad(Request $request)
+    {
+        return $this->discapacidadService->crearAsignacionEmpleadoDiscapacidad($request);
+    }
+
+    public function actualizarAsignacionEmpleadoDiscapacidad(Request $request, $idEmpleado, $idDiscapacidad)
+    {
+        return $this->discapacidadService->actualizarAsignacionEmpleadoDiscapacidad($request, $idEmpleado, $idDiscapacidad);
+    }
+
+    public function eliminarAsignacionEmpleadoDiscapacidad($idEmpleado, $idDiscapacidad)
+    {
+
+        return $this->discapacidadService->eliminarAsignacionEmpleadoDiscapacidad($idEmpleado, $idDiscapacidad);
+    }
+
+
+    public function listarDiscapacidadesPorEmpleadoId($idEmpleado)
+    {
+        return $this->discapacidadService->listarDiscapacidadesPorEmpleadoId($idEmpleado);
+    }
+
+
+    public function listarEmpleadosPorDiscapacidadId($idDiscapacidad)
+    {
+        return $this->discapacidadService->listarEmpleadosPorDiscapacidadId($idDiscapacidad);
+    }
 }
